<?xml version="1.0" encoding="utf-8"?>
<menu
      xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/checkboxItem"
        android:checkable="true"
        android:checked="true"
        android:title="@string/checkbox" />

    <item
        android:id="@+id/radiobuttonItem"
        android:title="@string/radiobutton_clickme"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/radioOne"
                    android:title="@string/radiobutton" />
                <item
                    android:id="@+id/radioTwo"
                    android:checked="true"
                    android:title="@string/radiobutton" />
                <item
                    android:id="@+id/radioThree"
                    android:title="@string/radiobutton" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_pause"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:title="@string/pause"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"/>
    <item
        android:id="@+id/action_achievements"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/achievements"/>
    <item
        android:id="@+id/action_leaderboard"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/leaderboard"/>
    <item
        android:id="@+id/action_faq"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/faq"/>
    <item
        android:id="@+id/action_split_count"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/split_count"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/about"/>

</menu>